<?xml version="1.0"?>
<package format="2">
  <name>ins_processing</name>
  <version>0.0.1</version>
  <description>INS Processing with GPS</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>Eigen3</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_components</depend>

  <!-- Runtime dependencies -->
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend> <!-- Corrected this one -->

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
